added back in and updated nav bar to show "about" as an actual button

--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -1,6 +1,5 @@
-<nav>
-    <ul class="navbar-links">
-        <li routerLink="/">Home</li>
-        <li routerLink="/about">About</li>
-    </ul>
-</nav>
+<mat-card>
+  <section>
+    <button [routerLink]="['/about']" mat-button>About</button>
+  </section>
+</mat-card>
