- updated some styling to not have things at the edge of the page - added "home" page and updated routes/navbar to include it

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,3 +1,13 @@
-*{font-family: sans-serif;}
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+.navBar{
+    margin: 0px;
+}
+.body-content {
+  margin: 0px 50px;
+}
