--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -1,5 +1,8 @@
+<div class="navBar">
 <mat-card>
   <section>
+    <button [routerLink]="['/']" mat-button>Home</button>
     <button [routerLink]="['/about']" mat-button>About</button>
   </section>
 </mat-card>
+</div>
