got a potential usage of mat-table done, but it's not working. Going to create a "materialTest" component to get things going

--- a/frontend/src/app/about/about.component.html
+++ b/frontend/src/app/about/about.component.html
@@ -7,13 +7,12 @@
   <li>
     CRUD operations for financial line items including:
     <ul>
-      <li>Date</li>
-      <li>Item</li>
-      <li>Category</li>
-      <li>Credit card used</li>
-      <li>Zelle/Venmo/Etc.</li>
-      <li>Cash</li>
-      <li>Check</li>
+      <li>Expense Date</li>
+      <li>Expense Description</li>
+      <li>Expense Amount</li>
+      <li>Expense Type</li>
+      <li>Payment Type (withdrawal, deposit, credit, cash, cash app, etc)</li>
+      <li>Payment Description</li>
     </ul>
   </li>
   <li>Monthly rollup</li>
