commented out old material UI components that weren't working - going to get them working in another component

--- a/frontend/src/app/finances/finances.component.html
+++ b/frontend/src/app/finances/finances.component.html
@@ -3,7 +3,7 @@
 
 
 <!-- <table mat-table [dataSource]="dataSource"> -->
-<table mat-table>
+<!-- <table mat-table>
     <ng-container matColumnDef="expenseDate">
         <th mat-header-cell *matHeaderCellDef>Date</th>
         <td mat-cell *matCellDef="let currentExpense">{{currentExpense.expenseDate}}</td>
@@ -28,4 +28,4 @@
         <th mat-header-cell *matHeaderCellDef>Payment Description</th>
         <td mat-cell *matCellDef="let currentExpense">{{currentExpense.paymentDescription}}</td>
     </ng-container>
-</table>
+</table> -->
