added way to navigate to "test" easily

--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -3,6 +3,7 @@
   <section>
     <button [routerLink]="['/']" mat-button>Home</button>
     <button [routerLink]="['/about']" mat-button>About</button>
+    <button [routerLink]="['/test']" mat-button>Test</button>
   </section>
 </mat-card>
 </div>
