--- a/frontend/src/app/material-test/material-test.component.html
+++ b/frontend/src/app/material-test/material-test.component.html
@@ -12,11 +12,11 @@
     <th mat-header-cell *matHeaderCellDef>Actions</th>
     <td mat-cell *matCellDef="let element">
       <div class="table-icon-column">
-        <button mat-icon-button (click)="test('Edit')">
-            <mat-icon>edit</mat-icon>
+        <button mat-icon-button (click)="test('Edit ' + element.position)">
+          <mat-icon class="blue-text">edit</mat-icon>
         </button>
-        <button mat-icon-button (click)="test('Delete')">
-          <mat-icon>delete</mat-icon>
+        <button mat-icon-button (click)="test('Delete ' + element.position)">
+          <mat-icon class="red-text">delete</mat-icon>
         </button>
       </div>
     </td>
