--- a/frontend/src/app/material-test/material-test.component.html
+++ b/frontend/src/app/material-test/material-test.component.html
@@ -12,12 +12,18 @@
     <th mat-header-cell *matHeaderCellDef>Actions</th>
     <td mat-cell *matCellDef="let element">
       <div class="table-icon-column">
-        <button mat-icon-button (click)="test('Edit ' + element.position)">
+        @if(isEditing){ 
+          <button mat-icon-button (click)="save('save ' + element.position)">
+            <mat-icon class="green-text">checkmark</mat-icon>
+          </button>
+        } @else {
+        <button mat-icon-button (click)="edit('Edit ' + element.position)">
           <mat-icon class="blue-text">edit</mat-icon>
         </button>
         <button mat-icon-button (click)="test('Delete ' + element.position)">
           <mat-icon class="red-text">delete</mat-icon>
         </button>
+        }
       </div>
     </td>
   </ng-container>
