- updated in-line edits to have custom style since the "material" styles were getting wonky. - added in (but commented out) the way I was trying to use the matInputModule for questions to someone later

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -25,3 +25,8 @@ body {
 .green-text{
   color: rgb(1, 127, 1);
 }
+.input-textbox{
+  border-radius: 5px;
+  border-color: rgb(199, 199, 199);
+  padding: .25em
+}
