--- a/frontend/src/app/material-test/material-test.component.html
+++ b/frontend/src/app/material-test/material-test.component.html
@@ -51,7 +51,17 @@
     >
       Name
     </th>
-    <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+    <td mat-cell *matCellDef="let element">
+      @if(element.isEditing){
+        <!-- <mat-form-field> -->
+          <!-- <mat-label>Element Name</mat-label> -->
+          <!-- <input type="text" matInput id="elementName_{{element.position}}" [value]="element.name"> -->
+          <input class="input-textbox" type="text" id="elementName_{{element.position}}" [value]="element.name">
+        <!-- </mat-form-field> -->
+      } @else {    
+        {{ element.name }}
+      }
+    </td>
   </ng-container>
 
   <!-- Weight Column -->
@@ -64,7 +74,19 @@
     >
       Weight
     </th>
-    <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
+    <td mat-cell *matCellDef="let element">
+      @if(element.isEditing){
+        <p>
+          <!-- <mat-form-field> -->
+            <!-- <mat-label>Element Weight</mat-label> -->
+            <!-- <input type="text" matInput id="elementWeight_{{element.position}}" [value]="element.weight"> -->
+            <input class="input-textbox" type="text" id="elementWeight_{{element.position}}" [value]="element.weight">
+          <!-- </mat-form-field> -->
+        </p>
+      } @else {    
+        {{ element.weight }}
+      }
+    </td>
   </ng-container>
 
   <!-- Symbol Column -->
@@ -77,7 +99,17 @@
     >
       Symbol
     </th>
-    <td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
+    <td mat-cell *matCellDef="let element">
+      @if(element.isEditing){
+      <!-- <mat-form-field> -->
+          <!-- <mat-label>Element Symbol</mat-label>         -->
+          <!-- <input type="text" matInput id="elementSymbol_{{element.position}}" [value]="element.symbol"> -->
+          <input class="input-textbox" type="text" id="elementSymbol_{{element.position}}" [value]="element.symbol">
+        <!-- </mat-form-field> -->
+      } @else {    
+        {{ element.symbol }}
+      }
+    </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
