--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -26,7 +26,8 @@ body {
   color: rgb(1, 127, 1);
 }
 .input-textbox{
-  border-radius: 5px;
+  border-radius: 8px;
   border-color: rgb(199, 199, 199);
+  background-color: rgb(247, 247, 233);
   padding: .25em
 }
