--- a/frontend/src/app/material-test/dialog-delete-element-confirmation/dialog-delete-element-confirmation.component.html
+++ b/frontend/src/app/material-test/dialog-delete-element-confirmation/dialog-delete-element-confirmation.component.html
@@ -1,7 +1,7 @@
 <h2 mat-dialog-title>Delete {{inputData.name}}?</h2>
 <mat-dialog-content class="mat-typography">
     <ul>
-        <li>Position: {{inputData.position}}</li>
+        <li>elementId: {{inputData.elementId}}</li>
         <li>Name: {{inputData.name}}</li>
         <li>Weight: {{inputData.weight}}</li>
         <li>Symbol: {{inputData.symbol}}</li>
