--- a/frontend/src/app/material-test/material-test.component.html
+++ b/frontend/src/app/material-test/material-test.component.html
@@ -13,14 +13,14 @@
     <td mat-cell *matCellDef="let element">
       <div class="table-icon-column">
         @if(element.isEditing){ 
-          <button mat-icon-button (click)="saveRow(element.position)">
+          <button mat-icon-button (click)="saveRow(element.elementId)">
             <mat-icon class="green-text">checkmark</mat-icon>
           </button>
         } @else {
-        <button mat-icon-button (click)="editRow(element.position)">
+        <button mat-icon-button (click)="editRow(element.elementId)">
           <mat-icon class="blue-text">edit</mat-icon>
         </button>
-        <button mat-icon-button (click)="confirmDeleteRow(element.position)">
+        <button mat-icon-button (click)="confirmDeleteRow(element.elementId)">
           <mat-icon class="red-text">delete</mat-icon>
         </button>
         }
@@ -28,8 +28,8 @@
     </td>
   </ng-container>
 
-  <!-- Position Column -->
-  <ng-container matColumnDef="position">
+  <!-- elementId Column -->
+  <ng-container matColumnDef="elementId">
     <th
       mat-header-cell
       *matHeaderCellDef
@@ -38,7 +38,7 @@
     >
       No.
     </th>
-    <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+    <td mat-cell *matCellDef="let element">{{ element.elementId }}</td>
   </ng-container>
 
   <!-- Name Column -->
@@ -55,8 +55,8 @@
       @if(element.isEditing){
         <!-- <mat-form-field> -->
           <!-- <mat-label>Element Name</mat-label> -->
-          <!-- <input type="text" matInput id="elementName_{{element.position}}" [value]="element.name"> -->
-          <input class="input-textbox" type="text" id="{{identifiers.name}}{{element.position}}" [value]="element.name">
+          <!-- <input type="text" matInput id="elementName_{{element.elementId}}" [value]="element.name"> -->
+          <input class="input-textbox" type="text" id="{{identifiers.name}}{{element.elementId}}" [value]="element.name">
         <!-- </mat-form-field> -->
       } @else {    
         {{ element.name }}
@@ -79,8 +79,8 @@
         <p>
           <!-- <mat-form-field> -->
             <!-- <mat-label>Element Weight</mat-label> -->
-            <!-- <input type="text" matInput id="elementWeight_{{element.position}}" [value]="element.weight"> -->
-            <input class="input-textbox" type="text" id="{{identifiers.weight}}{{element.position}}" [value]="element.weight">
+            <!-- <input type="text" matInput id="elementWeight_{{element.elementId}}" [value]="element.weight"> -->
+            <input class="input-textbox" type="text" id="{{identifiers.weight}}{{element.elementId}}" [value]="element.weight">
           <!-- </mat-form-field> -->
         </p>
       } @else {    
@@ -103,8 +103,8 @@
       @if(element.isEditing){
       <!-- <mat-form-field> -->
           <!-- <mat-label>Element Symbol</mat-label>         -->
-          <!-- <input type="text" matInput id="elementSymbol_{{element.position}}" [value]="element.symbol"> -->
-          <input class="input-textbox" type="text" id="{{identifiers.symbol}}{{element.position}}" [value]="element.symbol">
+          <!-- <input type="text" matInput id="elementSymbol_{{element.elementId}}" [value]="element.symbol"> -->
+          <input class="input-textbox" type="text" id="{{identifiers.symbol}}{{element.elementId}}" [value]="element.symbol">
         <!-- </mat-form-field> -->
       } @else {    
         {{ element.symbol }}
