got "add" modal working and returning a value

--- a/frontend/src/app/material-test/material-test.component.html
+++ b/frontend/src/app/material-test/material-test.component.html
@@ -1,4 +1,4 @@
-<p><button mat-flat-button (click)="testAddNewElement()">Add</button></p>
+<p><button mat-flat-button (click)="openAddRowModal()">Add</button></p>
 
 <table
   mat-table
