--- a/frontend/src/app/material-test/dialog-add-element/dialog-add-element.component.html
+++ b/frontend/src/app/material-test/dialog-add-element/dialog-add-element.component.html
@@ -1,1 +1,8 @@
-<p>dialog-add-element works!</p>
+<h2 mat-dialog-title>Add New Element</h2>
+<mat-dialog-content class="mat-typography">
+    testing
+</mat-dialog-content>
+<mat-dialog-actions align="end">
+  <button mat-button mat-dialog-close>Cancel</button>
+  <button mat-button [mat-dialog-close]="submitNewElement()" cdkFocusInitial>Add</button>
+</mat-dialog-actions>
