--- a/frontend/src/app/material-test/dialog-add-element/dialog-add-element.component.html
+++ b/frontend/src/app/material-test/dialog-add-element/dialog-add-element.component.html
@@ -32,5 +32,5 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Cancel</button>
-  <button mat-button [mat-dialog-close]="submitNewElement()" cdkFocusInitial>Add</button>
+  <button mat-button (click)="submitNewElement()" cdkFocusInitial>Add</button>
 </mat-dialog-actions>
