--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -29,5 +29,32 @@ body {
   border-radius: 8px;
   border-color: rgb(199, 199, 199);
   background-color: rgb(247, 247, 233);
-  padding: .25em
+  padding: .25em;
+}
+.input-label-modal {
+  font-size: 12px;
+  color: #333;
+  margin-bottom: 5px;
+}
+.input-textbox-modal {
+  width: 100%;
+  padding: .5em;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+.form-flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
+[formgroupname].ng-invalid.ng-touched.ng-dirty label,
+.control:has(.ng-invalid.ng-touched.ng-dirty) label {
+  color: #f98b75;
+}
+
+[formgroupname].ng-invalid.ng-touched.ng-dirty input,
+input.ng-invalid.ng-touched.ng-dirty {
+  background-color: #fbdcd6;
+  border-color: #f84e2c;
 }
