--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -32,14 +32,12 @@ body {
   padding: .25em;
 }
 .input-label-modal {
-  font-size: 12px;
+  font-size: 12pt;
   color: #333;
-  margin-bottom: 5px;
 }
 .input-textbox-modal {
   width: 100%;
   padding: .5em;
-  margin-bottom: 10px;
   border: 1px solid #ccc;
   box-sizing: border-box;
 }
@@ -47,14 +45,22 @@ body {
   display: flex;
   flex-direction: column;
 }
+.form-group-div{
+	margin-bottom: 10px;
+}
 
 [formgroupname].ng-invalid.ng-touched.ng-dirty label,
 .control:has(.ng-invalid.ng-touched.ng-dirty) label {
   color: #f98b75;
 }
-
 [formgroupname].ng-invalid.ng-touched.ng-dirty input,
 input.ng-invalid.ng-touched.ng-dirty {
   background-color: #fbdcd6;
   border-color: #f84e2c;
+}
+.error-label{
+	font-size: 10pt;
+	color: #f98b75;
+	font-weight: bold;
+	display: block;
 }
