--- a/frontend/src/app/material-test/dialog-add-element/dialog-add-element.component.html
+++ b/frontend/src/app/material-test/dialog-add-element/dialog-add-element.component.html
@@ -1,63 +1,74 @@
-<h2 mat-dialog-title>Add New Element</h2>
-<mat-dialog-content class="mat-typography">
-  <div class="example-container">
-    <form [formGroup]="form" class="form-flex-column">
-      <div class="control form-group-div">
-        <label for="elementName" class="input-label-modal">Element Name :</label>
-        <input
-          id="elementName"
-          class="input-textbox input-textbox-modal"
-          type="text"
-          name="elementName"
-          formControlName="elementName"
-        />
-		@if(hasError(form.controls.elementName)){
-			<label class="error-label">{{getFormControlErrorDetails(form.controls.elementName)}}</label>
-		}
-      </div>
-      <div class="control form-group-div">
-        <label for="elementWeight" class="input-label-modal">Element Weight :</label>
-        <input
-          id="elementWeight"
-          class="input-textbox input-textbox-modal"
-          type="text"
-          name="elementWeight"
-          formControlName="elementWeight"
-        />
-		@if(hasError(form.controls.elementWeight)){
-			<label class="error-label">{{getFormControlErrorDetails(form.controls.elementWeight)}}</label>
-		}
-      </div>
-      <div class="control form-group-div">
-        <label for="elementSymbol" class="input-label-modal">Element Symbol :</label>
-        <input
-          id="elementSymbol"
-          class="input-textbox input-textbox-modal"
-          type="text"
-          name="elementSymbol"
-          formControlName="elementSymbol"
-        />
-		@if(hasError(form.controls.elementSymbol)){
-			<label class="error-label">{{getFormControlErrorDetails(form.controls.elementSymbol)}}</label>
-		}
-      </div>
-    </form>
-    <!-- <mat-form-field>
-          <mat-label>Enter your email</mat-label>
-          <input
-		  matInput
-            placeholder="pat@example.com"
-            [formControl]="email"
-            (blur)="updateErrorMessage()"
-            required
-          />
-          @if (email.invalid) {
-            <mat-error>{{errorMessage()}}</mat-error>
-          }
-        </mat-form-field> -->
-  </div>
-</mat-dialog-content>
-<mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close>Cancel</button>
-  <button mat-button (click)="submitNewElement()" cdkFocusInitial>Add</button>
-</mat-dialog-actions>
+@if(inputData.itemState === getElementCrudStates().create){
+	<h2 mat-dialog-title>Add New Element</h2>
+	<mat-dialog-content class="mat-typography">
+	<div class="example-container">
+		<form [formGroup]="form" class="form-flex-column">
+		<div class="control form-group-div">
+			<label for="elementName" class="input-label-modal">Element Name :</label>
+			<input
+			id="elementName"
+			class="input-textbox input-textbox-modal"
+			type="text"
+			name="elementName"
+			formControlName="elementName"
+			/>
+			@if(hasError(form.controls.elementName)){
+				<label class="error-label">{{getFormControlErrorDetails(form.controls.elementName)}}</label>
+			}
+		</div>
+		<div class="control form-group-div">
+			<label for="elementWeight" class="input-label-modal">Element Weight :</label>
+			<input
+			id="elementWeight"
+			class="input-textbox input-textbox-modal"
+			type="text"
+			name="elementWeight"
+			formControlName="elementWeight"
+			/>
+			@if(hasError(form.controls.elementWeight)){
+				<label class="error-label">{{getFormControlErrorDetails(form.controls.elementWeight)}}</label>
+			}
+		</div>
+		<div class="control form-group-div">
+			<label for="elementSymbol" class="input-label-modal">Element Symbol :</label>
+			<input
+			id="elementSymbol"
+			class="input-textbox input-textbox-modal"
+			type="text"
+			name="elementSymbol"
+			formControlName="elementSymbol"
+			/>
+			@if(hasError(form.controls.elementSymbol)){
+				<label class="error-label">{{getFormControlErrorDetails(form.controls.elementSymbol)}}</label>
+			}
+		</div>
+		</form>
+		<!-- <mat-form-field>
+			<mat-label>Enter your email</mat-label>
+			<input
+			matInput
+				placeholder="pat@example.com"
+				[formControl]="email"
+				(blur)="updateErrorMessage()"
+				required
+			/>
+			@if (email.invalid) {
+				<mat-error>{{errorMessage()}}</mat-error>
+			}
+			</mat-form-field> -->
+	</div>
+	</mat-dialog-content>
+	<mat-dialog-actions align="end">
+	<button mat-button mat-dialog-close>Cancel</button>
+	<button mat-button (click)="submitNewElement()" cdkFocusInitial>Add</button>
+	</mat-dialog-actions>
+}
+@else if (inputData.itemState === getElementCrudStates().update) {
+	<h2 mat-dialog-title>Edit Element</h2>
+		<mat-dialog-content class="mat-typography">
+		</mat-dialog-content>
+	<mat-dialog-actions align="end">
+	<button mat-button mat-dialog-close>Cancel</button>
+	<button mat-button (click)="saveEditedElement()" cdkFocusInitial>Save</button>
+	</mat-dialog-actions>
+}
