changed the "add" crud operation to utilize the new object that's being sent to the crud modal

--- a/frontend/src/app/material-test/dialog-add-element/dialog-add-element.component.html
+++ b/frontend/src/app/material-test/dialog-add-element/dialog-add-element.component.html
@@ -1,4 +1,4 @@
-@if(inputData.itemState === getElementCrudStates().create){
+@if(inputData.elementState === getElementCrudStates().create){
 	<h2 mat-dialog-title>Add New Element</h2>
 	<mat-dialog-content class="mat-typography">
 	<div class="example-container">
