--- a/frontend/src/app/material-test/dialog-add-element/dialog-add-element.component.html
+++ b/frontend/src/app/material-test/dialog-add-element/dialog-add-element.component.html
@@ -118,17 +118,5 @@
 	</mat-dialog-actions>
 }
 @else if (inputData.elementState === getElementCrudStates().delete) {
-	<h2 mat-dialog-title>Delete {{inputData.elementData.name}}?</h2>
-	<mat-dialog-content class="mat-typography">
-		<ul>
-			<li>elementId: {{inputData.elementData.elementId}}</li>
-			<li>Name: {{inputData.elementData.name}}</li>
-			<li>Weight: {{inputData.elementData.weight}}</li>
-			<li>Symbol: {{inputData.elementData.symbol}}</li>
-		</ul>
-	</mat-dialog-content>
-	<mat-dialog-actions align="end">
-	<button mat-button mat-dialog-close>Cancel</button>
-	<button mat-button [mat-dialog-close]="true" cdkFocusInitial>Delete</button>
-	</mat-dialog-actions>
+	<app-dialog-delete-element-confirmation [elementData]="inputData.elementData"/>
 }
