--- a/frontend/src/app/material-test/dialog-delete-element-confirmation/dialog-delete-element-confirmation.component.html
+++ b/frontend/src/app/material-test/dialog-delete-element-confirmation/dialog-delete-element-confirmation.component.html
@@ -1,10 +1,10 @@
-<h2 mat-dialog-title>Delete {{inputData.name}}?</h2>
+<h2 mat-dialog-title>Delete {{elementData().name}}?</h2>
 <mat-dialog-content class="mat-typography">
     <ul>
-        <li>elementId: {{inputData.elementId}}</li>
-        <li>Name: {{inputData.name}}</li>
-        <li>Weight: {{inputData.weight}}</li>
-        <li>Symbol: {{inputData.symbol}}</li>
+        <li>elementId: {{elementData().elementId}}</li>
+        <li>Name: {{elementData().name}}</li>
+        <li>Weight: {{elementData().weight}}</li>
+        <li>Symbol: {{elementData().symbol}}</li>
     </ul>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
