- cleaned up modal components to ensure they only have the stuff they absolutely need.

--- a/frontend/src/app/dialogs/dialog-element-crud-operations/dialog-element-crud-operations.component.html
+++ b/frontend/src/app/dialogs/dialog-element-crud-operations/dialog-element-crud-operations.component.html
@@ -1,5 +1,5 @@
 @if(inputData.elementState === getElementCrudStates().create){
-	<app-dialog-add-element [elementData]="inputData.elementData"/>
+	<app-dialog-add-element/>
 }
 @else if (inputData.elementState === getElementCrudStates().update) {
 	<app-dialog-edit-element [elementData]="inputData.elementData"/>
