--- a/frontend/src/app/material-test/material-test.component.html
+++ b/frontend/src/app/material-test/material-test.component.html
@@ -1,6 +1,6 @@
 <p><button mat-flat-button (click)="openAddElementModal()">Add</button></p>
 
-<!-- <p>datasource().data</p>
+<p>datasource().data</p>
 <ul>
 @for(element of dataSource().data; track element.elementId){
 	<li>{{element}}</li>
@@ -19,7 +19,7 @@
 @for(element of getElementService_private_elements(); track element.elementId){
 	<li>{{element}}</li>
 }
-</ul> -->
+</ul>
 
 <table
   mat-table
