--- a/frontend/src/app/material-test/material-test.component.html
+++ b/frontend/src/app/material-test/material-test.component.html
@@ -1,29 +1,8 @@
 <p><button mat-flat-button (click)="openAddElementModal()">Add</button></p>
 
-<p>DSMatTable().data</p>
-<ul>
-@for(element of DSMatTable().data; track element.elementId){
-	<li>{{element}}</li>
-}
-</ul>
-
-<p>this.elementService.ELEMENT_DATA</p>
-<ul>
-@for(element of getElementServiceELEMENT_DATA(); track element.elementId){
-	<li>{{element}}</li>
-}
-</ul>
-
-<p>this.elementService._private_elements</p>
-<ul>
-@for(element of getElementService_private_elements(); track element.elementId){
-	<li>{{element}}</li>
-}
-</ul>
-
 <table
   mat-table
-  [dataSource]="DSMatTable()"
+  [dataSource]="dataSource"
   matSort
   (matSortChange)="announceSortChange($event)"
   class="mat-elevation-z8"
