refactor to update property names of the periodic elements to better describe themselves

--- a/frontend/src/app/confirmation-dialog/confirmation-dialog.component.html
+++ b/frontend/src/app/confirmation-dialog/confirmation-dialog.component.html
@@ -1,10 +1,10 @@
-<h2 mat-dialog-title>Delete {{inputData.name}}?</h2>
+<h2 mat-dialog-title>Delete {{inputData.elementName}}?</h2>
 <mat-dialog-content class="mat-typography">
     <ul>
         <li>Position: {{inputData.position}}</li>
-        <li>Name: {{inputData.name}}</li>
-        <li>Weight: {{inputData.weight}}</li>
-        <li>Symbol: {{inputData.symbol}}</li>
+        <li>Name: {{inputData.elementName}}</li>
+        <li>Weight: {{inputData.elementWeight}}</li>
+        <li>Symbol: {{inputData.elementSymbol}}</li>
     </ul>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
