--- a/frontend/src/app/dialogs/dialog-element-crud-operations/dialog-delete-element-confirmation/dialog-delete-element-confirmation.component.html
+++ b/frontend/src/app/dialogs/dialog-element-crud-operations/dialog-delete-element-confirmation/dialog-delete-element-confirmation.component.html
@@ -1,10 +1,10 @@
-<h2 mat-dialog-title>Delete {{elementData().name}}?</h2>
+<h2 mat-dialog-title>Delete {{elementData().elementName}}?</h2>
 <mat-dialog-content class="mat-typography">
     <ul>
         <li>elementId: {{elementData().elementId}}</li>
-        <li>Name: {{elementData().name}}</li>
-        <li>Weight: {{elementData().weight}}</li>
-        <li>Symbol: {{elementData().symbol}}</li>
+        <li>Name: {{elementData().elementName}}</li>
+        <li>Weight: {{elementData().elementWeight}}</li>
+        <li>Symbol: {{elementData().elementSymbol}}</li>
     </ul>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
