--- a/frontend/src/app/material-test/material-test.component.html
+++ b/frontend/src/app/material-test/material-test.component.html
@@ -36,7 +36,7 @@
   </ng-container>
 
   <!-- Name Column -->
-  <ng-container matColumnDef="name">
+  <ng-container matColumnDef="elementName">
     <th
       mat-header-cell
       *matHeaderCellDef
@@ -46,12 +46,12 @@
       Name
     </th>
     <td mat-cell *matCellDef="let element">  
-        {{ element.name }}
+        {{ element.elementName }}
     </td>
   </ng-container>
 
   <!-- Weight Column -->
-  <ng-container matColumnDef="weight">
+  <ng-container matColumnDef="elementWeight">
     <th
       mat-header-cell
       *matHeaderCellDef
@@ -61,12 +61,12 @@
       Weight
     </th>
     <td mat-cell *matCellDef="let element">  
-        {{ element.weight }}
+        {{ element.elementWeight }}
     </td>
   </ng-container>
 
   <!-- Symbol Column -->
-  <ng-container matColumnDef="symbol">
+  <ng-container matColumnDef="elementSymbol">
     <th
       mat-header-cell
       *matHeaderCellDef
@@ -76,7 +76,7 @@
       Symbol
     </th>
     <td mat-cell *matCellDef="let element">
-        {{ element.symbol }}
+        {{ element.elementSymbol }}
     </td>
   </ng-container>
 
