re-order and re-name some of the navbar components

--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -1,9 +1,9 @@
 <div class="navBar">
 <mat-card>
   <section>
-    <button [routerLink]="['/']" mat-button>Home</button>
+    <button [routerLink]="['/']" mat-button>Finances</button>
+    <button [routerLink]="['/test']" mat-button>Testing</button>
     <button [routerLink]="['/about']" mat-button>About</button>
-    <button [routerLink]="['/test']" mat-button>Test</button>
   </section>
 </mat-card>
 </div>
