--- a/frontend/src/app/finances/finances.component.html
+++ b/frontend/src/app/finances/finances.component.html
@@ -26,7 +26,7 @@
   </ng-container>
 
   <!-- expenseId Column -->
-  <ng-container matColumnDef="expenseDate">
+  <ng-container matColumnDef="ExpenseDate">
     <th
       mat-header-cell
       *matHeaderCellDef
@@ -35,11 +35,11 @@
     >
       Date
     </th>
-    <td mat-cell *matCellDef="let expense">{{ expense.expenseDate }}</td>
+    <td mat-cell *matCellDef="let expense">{{ expense.ExpenseDate }}</td>
   </ng-container>
 
   <!-- Description Column -->
-  <ng-container matColumnDef="expenseDescription">
+  <ng-container matColumnDef="ExpenseDescription">
     <th
       mat-header-cell
       *matHeaderCellDef
@@ -49,12 +49,12 @@
       Description
     </th>
     <td mat-cell *matCellDef="let expense">  
-        {{ expense.expenseDescription }}
+        {{ expense.ExpenseDescription }}
     </td>
   </ng-container>
 
   <!-- Amount Column -->
-  <ng-container matColumnDef="expenseAmount">
+  <ng-container matColumnDef="ExpenseAmount">
     <th
       mat-header-cell
       *matHeaderCellDef
@@ -64,12 +64,12 @@
       Amount
     </th>
     <td mat-cell *matCellDef="let expense">  
-        {{ expense.expenseAmount }}
+        {{ expense.ExpenseAmount }}
     </td>
   </ng-container>
 
   <!-- Expense Type Column -->
-  <ng-container matColumnDef="expenseType">
+  <ng-container matColumnDef="ExpenseTypeName">
     <th
       mat-header-cell
       *matHeaderCellDef
@@ -79,12 +79,12 @@
       Expense Type
     </th>
     <td mat-cell *matCellDef="let expense">
-        {{ expense.expense }}
+        {{ expense.ExpenseTypeName }}
     </td>
   </ng-container>
 
   <!-- Payment Type Column -->
-  <ng-container matColumnDef="expensePaymentType">
+  <ng-container matColumnDef="PaymentTypeName">
     <th
       mat-header-cell
       *matHeaderCellDef
@@ -94,24 +94,9 @@
       Payment Type
     </th>
     <td mat-cell *matCellDef="let expense">
-        {{ expense.expensePaymentType }}
+        {{ expense.PaymentTypeName }}
     </td>
-  </ng-container>
-
-  <!-- Payment Description Column -->
-  <ng-container matColumnDef="expensePaymentDescription">
-    <th
-      mat-header-cell
-      *matHeaderCellDef
-      mat-sort-header
-      sortActionDescription="Sort by Payment Description"
-    >
-		Payment Description
-    </th>
-    <td mat-cell *matCellDef="let expense">
-        {{ expense.expensePaymentDescription }}
-    </td>
-  </ng-container>
+</ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
