- updated Expense model to fit closer to Json naming convention - added delete modal with some data to confirm deletion (delete does not fully work yet).

--- a/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-routing.component.html
+++ b/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-routing.component.html
@@ -1,3 +1,6 @@
 @if(inputData.expenseState === getCrudStates().create){
 	<app-expense-dialog-add/>
 }
+@else if (inputData.expenseState === getCrudStates().delete) {
+	<app-expense-dialog-delete [expenseData]="inputData.expenseData"/>
+}
