Fixed updated naming convention to do the POC that utilizing a Json DTO in the C# side to handle the difference in naming would indeed work as well as we'd hoped.

--- a/frontend/src/app/dialogs/material-test-elements/dialog-element-crud-operations/dialog-edit-element/dialog-edit-element.component.html
+++ b/frontend/src/app/dialogs/material-test-elements/dialog-element-crud-operations/dialog-edit-element/dialog-edit-element.component.html
@@ -1,7 +1,7 @@
 <h2 mat-dialog-title>Edit Element</h2>
 <mat-dialog-content class="mat-typography">
 	<ul>
-		<li>elementId: {{inputData.elementData.elementId}}</li>
+		<li>elementID: {{inputData.elementData.elementID}}</li>
 	</ul>
 
 	<form [formGroup]="form" class="form-flex-column">
