--- a/frontend/src/app/dialogs/material-test-elements/dialog-element-crud-operations/dialog-delete-element-confirmation/dialog-delete-element-confirmation.component.html
+++ b/frontend/src/app/dialogs/material-test-elements/dialog-element-crud-operations/dialog-delete-element-confirmation/dialog-delete-element-confirmation.component.html
@@ -1,7 +1,7 @@
 <h2 mat-dialog-title>Delete {{elementData().elementName}}?</h2>
 <mat-dialog-content class="mat-typography">
     <ul>
-        <li>elementId: {{elementData().elementId}}</li>
+        <li>elementId: {{elementData().elementID}}</li>
         <li>Name: {{elementData().elementName}}</li>
         <li>Weight: {{elementData().elementWeight}}</li>
         <li>Symbol: {{elementData().elementSymbol}}</li>
