--- a/frontend/src/app/material-test/material-test.component.html
+++ b/frontend/src/app/material-test/material-test.component.html
@@ -12,18 +12,18 @@
     <th mat-header-cell *matHeaderCellDef>Actions</th>
     <td mat-cell *matCellDef="let element">
       <div class="table-icon-column">
-        <button mat-icon-button (click)="editElement(element.elementId)">
+        <button mat-icon-button (click)="editElement(element.elementID)">
           <mat-icon class="blue-text">edit</mat-icon>
         </button>
-        <button mat-icon-button (click)="confirmDeleteElement(element.elementId)">
+        <button mat-icon-button (click)="confirmDeleteElement(element.elementID)">
           <mat-icon class="red-text">delete</mat-icon>
         </button>
       </div>
     </td>
   </ng-container>
 
-  <!-- elementId Column -->
-  <ng-container matColumnDef="elementId">
+  <!-- elementID Column -->
+  <ng-container matColumnDef="elementID">
     <th
       mat-header-cell
       *matHeaderCellDef
@@ -32,7 +32,7 @@
     >
       No.
     </th>
-    <td mat-cell *matCellDef="let element">{{ element.elementId }}</td>
+    <td mat-cell *matCellDef="let element">{{ element.elementID }}</td>
   </ng-container>
 
   <!-- Name Column -->
