Adding a new expense with "some" dummy data against the API works now.

--- a/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-add/expense-dialog-add.component.html
+++ b/frontend/src/app/dialogs/finances/expense-dialog-routing/expense-dialog-add/expense-dialog-add.component.html
@@ -52,5 +52,5 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Cancel</button>
-  <!-- <button mat-button (click)="submitNewExpense()" cdkFocusInitial>Add</button> -->
+  <button mat-button (click)="submitNewExpense()" cdkFocusInitial>Add</button>
 </mat-dialog-actions>
