--- a/frontend/src/app/finances/finances.component.html
+++ b/frontend/src/app/finances/finances.component.html
@@ -64,7 +64,7 @@
       Amount
     </th>
     <td mat-cell *matCellDef="let expense">  
-        {{ expense.expenseAmount }}
+        {{ expense.expenseAmount | number : '1.2-2' }}
     </td>
   </ng-container>
 
